--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 </head>
 <body>
   <div class="wrapper">
-    
 
-    <!-- HEADER -->
+    <h1>Exceptional</h1>
     <!-- SUB HEAD -->
 
     <div id="content">
