--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="wrapper">
 
-    <h1>Exceptional</h1>
+    <h1>Welcome to Raiadh</h1>
     <!-- SUB HEAD -->
 
     <div id="content">
