Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="wrapper">
 
     <h1>Welcome to Riyadh</h1>
-    <!-- SUB HEAD -->
+    <h2>Realty Group</h2>
 
     <div id="content">
 
