--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="wrapper">
 
     <h1>Welcome to Riyadh</h1>
-    <h2>Realty Group</h2>
+    <h2>Where a Traditional Past Meets A Modern Future.</h2>
 
     <div id="content">
 
