Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div id="content">
 
-      <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
+      <img src=“images/transportation/transit.jpg- pic.jpg” alt=“A beautiful living room.” title=“Welcome to Exceptional Realty Group”>
         
     </div>
   </div>
