--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div id="content">
 
-      <img src=“images/transportation/transit.jpg” alt=“A beautiful living room.” title=“Welcome to Exceptional Realty Group”>
+      <img src=“images/transportation/transit.jpg” alt=“A modern transportation hub.” title=“Welcome to Riyadh”>
         
     </div>
   </div>
