--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <div id="content">
 
       <img src=“images/transportation/transit.jpg” alt=“A modern transportation hub.” title=“Welcome to Riyadh”>
+      <h2>Travel</h2>
+      
         
     </div>
   </div>
