Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <img src=“images/transportation/transit.jpg” alt=“A modern transportation hub.” title=“Welcome to Riyadh”>
       <h2>Travel</h2>
-      <p>Once a mudbrick trading station</p>
+      <p>Once a mudbrick waystation along desert trading routes</p>
         
     </div>
   </div>
