Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <img src=“images/transportation/transit.jpg” alt=“A modern transportation hub.” title=“Welcome to Riyadh”>
       <h2>Travel</h2>
-      <p>Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world.  The country's political, financial, and</p>
+      <p>Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world.  The country's political, financial, and administrative capital is also</p>
         
     </div>
   </div>
