--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <img src=“images/transportation/transit.jpg” alt=“A modern transportation hub.” title=“Welcome to Riyadh”>
       <h2>Travel</h2>
       <p>Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world.  The country's political, financial, and administrative capital is also a city with fascinating subtext.</p>
+      
+      <h2>History</h2>
+      <p>Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world.  The country's political, financial, and administrative capital is also a city with fascinating subtext.</p>
         
     </div>
   </div>
