Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <p>Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world.  The country's political, financial, and administrative capital is also a city with fascinating subtext.</p>
       
       <h2>History</h2>
-      <p>Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world.  The country's political, financial, and administrative capital is also a city with fascinating subtext.</p>
+      <p>Riyadh (/rɪˈjɑːd/; Arabic: الرياض‎, translit. ar-Riyāḍ [ar.riˈjaːdˤ], Najdi pronunciation: [er.rɪˈjɑːðˤ]) is the capital and largest city of Saudi Arabia.  </p>
         
     </div>
   </div>
