--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <p>Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world.  The country's political, financial, and administrative capital is also a city with fascinating subtext.</p>
       
       <h2>History</h2>
-      <p>Riyadh (/rɪˈjɑːd/; Arabic: الرياض ar-Riyāḍ pronounced [ar.riˈjaːdˤ], "The Gardens") is the capital and largest city of Saudi Arabia.  It is also the capital of Riyadh Province, and belongs to the historical regions of Najd and Al-Yamama. It is situated in the center of the Arabian Peninsula on a large plateau and home to more than six million people.</p>
+      <p>Riyadh (/rɪˈjɑːd/; Arabic: الرياض ar-Riyāḍ pronounced [ar.riˈjaːdˤ], "The Gardens") is the capital and largest city of Saudi Arabia.  It is also the capital of Riyadh Province, and belongs to the historical regions of Najd and Al-Yamama. It is situated in the center of the Arabian Peninsula on a large plateau, and home to more than six million people.</p>
         
     </div>
   </div>
