--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h2>History</h2>
       <p>Riyadh (/rɪˈjɑːd/; Arabic: الرياض ar-Riyāḍ pronounced [ar.riˈjaːdˤ], "The Gardens") is the capital and largest city of Saudi Arabia.  It is also the capital of Riyadh Province, and belongs to the historical regions of Najd and Al-Yamama. It is situated in the center of the Arabian Peninsula on a large plateau, and home to 5,254,560 people, and the urban center of a region with a population of close to 7 million people.</p>
         
-        <img src=“images/transportation/transit.jpg” alt=“A modern transportation hub.” title=“Welcome to Riyadh”>
+        <img src=“images/garden.jpg” alt=“A modern transportation hub.” title=“Welcome to Riyadh”>
         
     </div>
   </div>
